tests/paczka1/small_fuzzy/47994265.err
Error in line 1: hjtxSf A582 68,4
Error in line 6: hjtxSf A810 90,5
Error in line 9: hjtxSf S323 84,0
